various addtional features

--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -90,6 +90,7 @@
       },
       "categories": {
         "places": "Orte",
+        "place": "Standort",
         "visibility": "Sichtbarkeit",
         "events": "Veranstaltungen",
         "seo": "SEO",
@@ -105,6 +106,10 @@
         "heroImage": "Hero-Bild",
         "contacts": "Kontakte (Tel/E-Mail/Web)",
         "extraFields": "Zusätzliche Felder (Extras JSON)",
+        "galleriesMax": "Anzahl der Galerien (Site Admin + Retail User)",
+        "imagesPerGalleryMax": "Bilder pro Galerie",
+        "galleriesPerPlaceMax": "Galerien pro Ort (Retail User)",
+        "galleriesPerEventMax": "Galerien pro Veranstaltung (Retail User)",
         "featuredPlaces": "Hervorgehobene Orte",
         "featuredBoost": "Hervorgehobener Boost (Ranking-Gewicht)",
         "eventsEnabled": "Veranstaltungen aktiviert",
@@ -119,7 +124,11 @@
         "siteMembers": "Site-Mitglieder (Mitgliedschaften)",
         "eventLog": "Event-Log",
         "pushSubscription": "PushSubscription",
-        "optionalAddon": "optionales Add-on"
+        "optionalAddon": "optionales Add-on",
+        "placeImages": "Anzahl der Bilder",
+        "featuredPlacement": "Hervorgehobene Platzierung",
+        "placeTitle": "Standort-Pakete",
+        "placeSubtitle": "Wählen Sie ein Paket für Ihren Standort"
       },
       "featureMatrix": {
         "feature": "Funktion"
@@ -212,6 +221,7 @@
     "titleSuffix": "Admin",
     "edit": "Bearbeiten",
     "dashboard": "Dashboard",
+    "description": "Beschreibung",
     "categories": "Kategorien",
     "tags": "Tags",
     "priceBands": "Preisklassen",
@@ -296,6 +306,12 @@
     "mapDefaultZoom": "Standard-Zoom",
     "platformSettings": "Plattform-Einstellungen",
     "platformSettingsDescription": "Konfigurieren Sie den Plattformnamen, die Beschreibung und die Standard-SEO-Einstellungen.",
+    "featureMatrix": "Feature-Matrix-Konfiguration",
+    "featureMatrixDescription": "Konfigurieren Sie Feature-Limits und -Funktionen für jeden Abonnementplan. Lassen Sie Felder leer, um Standardwerte zu verwenden.",
+    "placeFeatureMatrix": "Standort-Abonnement-Matrix-Konfiguration",
+    "placeFeatureMatrixDescription": "Konfigurieren Sie Feature-Limits und -Funktionen für jeden Standort-Abonnementplan (free, basic, pro). Lassen Sie Felder leer, um Standardwerte zu verwenden.",
+    "resetToDefaults": "Auf Standardwerte zurücksetzen",
+    "overridden": "Überschrieben",
     "siteName": "Seitenname",
     "siteNamePlaceholder": "z.B. HelloLocal",
     "siteDescription": "Seitenbeschreibung",
@@ -447,11 +463,21 @@
     "availableFeatures": "Verfügbare Funktionen",
     "billingAndPlan": "Abrechnung und Plan",
     "planInfo": "Sie können den Plan in den Site-Einstellungen ändern.",
+    "placePlanInfo": "Sie können den Standort-Plan hier ändern.",
+    "placePlanInfoReadOnly": "Aktueller Standort-Plan.",
+    "changePlan": "Plan ändern",
+    "confirmPlanChange": "Sind Sie sicher, dass Sie zum {{plan}}-Plan wechseln möchten?",
+    "subscriptionDetails": "Abonnement-Details",
+    "lastChanged": "Zuletzt geändert",
+    "price": "Preis",
+    "validUntil": "Gültig bis",
     "manageFeatured": "Hervorgehobene Orte verwalten",
     "subscriptionOverview": "Abonnement-Übersicht",
     "subscriptionOverviewSubtitle": "Site-Abonnements und Nutzungsdaten",
     "subscriptionsDashboard": "Abonnements-Dashboard",
     "subscriptionsDashboardSubtitle": "Superadmin-Abonnementverwaltung",
+    "noDate": "Kein Datum",
+    "invalidDate": "Ungültiges Datum",
     "subscriptions": {
       "activeCount": "Aktiv",
       "mrr": "MRR",
@@ -485,6 +511,19 @@
     "previous": "Vorherige",
     "next": "Nächste",
     "noData": "Keine Daten",
+    "history": "Verlauf",
+    "subscriptionHistory": "Abonnement-Verlauf",
+    "noHistory": "Kein Verlauf",
+    "planChange": "Planänderung",
+    "statusChange": "Statusänderung",
+    "payment": "Zahlung",
+    "extension": "Verlängerung",
+    "created": "Erstellt",
+    "update": "Aktualisiert",
+    "from": "Von",
+    "to": "Zu",
+    "paymentDue": "Fälligkeitsdatum",
+    "amount": "Betrag",
     "planFree": "Free",
     "planBasic": "Basic",
     "planPro": "Pro",
@@ -497,6 +536,7 @@
     "statusActive": "Aktiv",
     "statusSuspended": "Ausgesetzt",
     "statusExpired": "Abgelaufen",
+    "actions": "Aktionen",
     "dashboardCards": {
       "userProfile": "Benutzerprofil",
       "userProfileDesc": "Ihr Profil anzeigen und bearbeiten",
@@ -518,6 +558,8 @@
       "legalPagesDesc": "Rechtliche Seiten verwalten",
       "staticPages": "Statische Seiten",
       "staticPagesDesc": "Statische Seiten verwalten",
+      "galleries": "Galerien",
+      "galleriesDesc": "Bildgalerien verwalten und Shortcodes generieren",
       "appSettingsDesc": "Systemweite Einstellungen verwalten",
       "usersDesc": "Benutzer und Berechtigungen verwalten",
       "eventLog": "Ereignisprotokoll",
@@ -729,7 +771,8 @@
       "brands": "Suche unter Marken...",
       "siteInstances": "Suche unter Seiteninstanzen (Site, Sprache, Domain)...",
       "tenantMemberships": "Suche unter Site-Mitgliedschaften (Site, Benutzer, Rolle)...",
-      "placeMemberships": "Suche unter Ortsmitgliedschaften (Ort, Benutzer, Rolle)..."
+      "placeMemberships": "Suche unter Ortsmitgliedschaften (Ort, Benutzer, Rolle)...",
+      "galleries": "Suche unter Galerien (Name, ID)..."
     },
     "validation": {
       "hungarianNameRequired": "Ungarischer Name ist erforderlich",
@@ -751,12 +794,27 @@
       "placeRequired": "Ort ist erforderlich",
       "roleRequired": "Rolle ist erforderlich"
     },
+    "common": {
+      "isActive": "Aktiv",
+      "yes": "Ja",
+      "no": "Nein",
+      "optional": "Optional",
+      "selectSite": "Wählen Sie eine Site",
+      "uploading": "Hochladen...",
+      "remove": "Entfernen",
+      "save": "Speichern",
+      "cancel": "Abbrechen",
+      "create": "Erstellen",
+      "edit": "Bearbeiten",
+      "delete": "Löschen"
+    },
     "confirmations": {
       "deleteCategory": "Möchten Sie diese Kategorie wirklich löschen?",
       "deleteTag": "Möchten Sie dieses Tag wirklich löschen?",
       "deletePriceBand": "Möchten Sie diese Preisklasse wirklich löschen?",
       "deletePlace": "Möchten Sie diesen Ort wirklich löschen?",
       "deleteTown": "Möchten Sie diese Stadt wirklich löschen?",
+      "deleteGallery": "Möchten Sie diese Galerie wirklich löschen?",
       "deleteLegalPage": "Möchten Sie diese rechtliche Seite wirklich löschen?",
       "deleteUser": "Möchten Sie diesen Benutzer wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
       "deleteSite": "Möchten Sie diese Site wirklich löschen?",
@@ -780,6 +838,7 @@
       "placeCreated": "Ort erfolgreich erstellt",
       "placeUpdated": "Ort erfolgreich aktualisiert",
       "placeDeleted": "Ort erfolgreich gelöscht",
+      "placePlanUpdated": "Standort-Plan erfolgreich aktualisiert",
       "priceBandCreated": "Preisklasse erfolgreich erstellt",
       "priceBandUpdated": "Preisklasse erfolgreich aktualisiert",
       "priceBandDeleted": "Preisklasse erfolgreich gelöscht"
