--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -38,6 +38,10 @@
     "yes": "Igen",
     "no": "Nem",
     "language": "Nyelv",
+    "optional": "Opcionális",
+    "selectSite": "Válassz egy site-ot",
+    "uploading": "Feltöltés...",
+    "remove": "Eltávolítás",
     "newVersionAvailable": "Új verzió érhető el. Az oldal frissül...",
     "back": "Vissza",
     "goBack": "Vissza"
@@ -90,6 +94,7 @@
       },
       "categories": {
         "places": "Helyek",
+        "place": "Helyszín",
         "visibility": "Láthatóság",
         "events": "Események",
         "seo": "SEO",
@@ -105,6 +110,10 @@
         "heroImage": "Hero kép",
         "contacts": "Kapcsolatok (tel/email/web)",
         "extraFields": "Extra mezők (extras JSON)",
+        "galleriesMax": "Galériák száma (site admin + retail user)",
+        "imagesPerGalleryMax": "Képek / galéria",
+        "galleriesPerPlaceMax": "Galériák / hely (retail user)",
+        "galleriesPerEventMax": "Galériák / esemény (retail user)",
         "featuredPlaces": "Kiemelt helyek (featured places)",
         "featuredBoost": "Kiemelt boost (ranking weight)",
         "eventsEnabled": "Események engedélyezve",
@@ -119,7 +128,11 @@
         "siteMembers": "Site tagok (memberships)",
         "eventLog": "Event log",
         "pushSubscription": "PushSubscription",
-        "optionalAddon": "optional add-on"
+        "optionalAddon": "optional add-on",
+        "placeImages": "Képek száma",
+        "featuredPlacement": "Kiemelt megjelenés",
+        "placeTitle": "Helyszín csomagok",
+        "placeSubtitle": "Válassz egy csomagot a helyszíned számára"
       },
       "featureMatrix": {
         "feature": "Funkció"
@@ -210,6 +223,7 @@
     "titleSuffix": "Admin",
     "edit": "Szerkesztés",
     "dashboard": "Irányítópult",
+    "description": "Leírás",
     "dashboardWelcome": "Üdvözlünk az admin felületen",
     "openPublicPage": "Publikus oldal",
     "backToPublicSite": "Vissza a publikus oldalra",
@@ -227,6 +241,7 @@
     "noEvents": "Nincs esemény",
     "noUsersFound": "Nincs felhasználó",
     "readMore": "Tovább",
+    "actions": "Műveletek",
     "settings": "Beállítások",
     "appSettings": "Platform beállítások",
     "appSettingsDesc": "Rendszer szintű beállítások kezelése",
@@ -320,6 +335,12 @@
     "mapDefaultZoom": "Alapértelmezett nagyítás",
     "platformSettings": "Platform beállítások",
     "platformSettingsDescription": "Állítsd be a platform nevét, leírását és alapértelmezett SEO beállításait.",
+    "featureMatrix": "Feature Mátrix Konfiguráció",
+    "featureMatrixDescription": "Konfiguráld a feature limiteket és képességeket minden előfizetési csomaghoz. Hagyd üresen a mezőket az alapértelmezett értékek használatához.",
+    "placeFeatureMatrix": "Helyszín Előfizetési Mátrix Konfiguráció",
+    "placeFeatureMatrixDescription": "Konfiguráld a feature limiteket és képességeket minden helyszín előfizetési csomaghoz (free, basic, pro). Hagyd üresen a mezőket az alapértelmezett értékek használatához.",
+    "resetToDefaults": "Alapértelmezett értékekre visszaállítás",
+    "overridden": "Felülírva",
     "siteName": "Oldal neve",
     "siteNamePlaceholder": "pl. HelloLocal",
     "siteDescription": "Oldal leírása",
@@ -431,6 +452,10 @@
       "quickActions": "Gyors műveletek",
       "openPublicPage": "Publikus oldal megnyitása"
     },
+    "siteEdit": {
+      "quickActions": "Gyors műveletek",
+      "openPublicPage": "Publikus oldal megnyitása"
+    },
     "beFeaturedPlace": "Legyen kiemelt hely",
     "featuredPlacementNotAvailable": "Ez a hely nem jelenik meg kiemelten a listákban és a térképen.",
     "isFeatured": "Kiemelt",
@@ -484,11 +509,21 @@
     "availableFeatures": "Elérhető funkciók",
     "billingAndPlan": "Számlázás és csomag",
     "planInfo": "A csomagot a Site beállításokban módosíthatod.",
+    "placePlanInfo": "A helyszín csomagját itt módosíthatod.",
+    "placePlanInfoReadOnly": "A helyszín jelenlegi csomagja.",
+    "changePlan": "Csomag módosítása",
+    "confirmPlanChange": "Biztosan át szeretnéd váltani a {{plan}} csomagra?",
+    "subscriptionDetails": "Előfizetés részletei",
+    "lastChanged": "Utolsó módosítás",
+    "price": "Ár",
+    "validUntil": "Érvényes",
     "manageFeatured": "Kiemelések kezelése",
     "subscriptionOverview": "Előfizetések áttekintése",
     "subscriptionOverviewSubtitle": "Site-ok előfizetései és használati adatai",
     "subscriptionsDashboard": "Előfizetések Dashboard",
     "subscriptionsDashboardSubtitle": "Superadmin előfizetés kezelés",
+    "noDate": "Nincs dátum",
+    "invalidDate": "Érvénytelen dátum",
     "subscriptions": {
       "activeCount": "Aktív",
       "mrr": "MRR",
@@ -522,6 +557,19 @@
     "previous": "Előző",
     "next": "Következő",
     "noData": "Nincs adat",
+    "history": "Előzmények",
+    "subscriptionHistory": "Előfizetés előzmények",
+    "noHistory": "Nincs előzmény",
+    "planChange": "Csomagváltás",
+    "statusChange": "Státusz változás",
+    "payment": "Fizetés",
+    "extension": "Hosszabbítás",
+    "created": "Létrehozva",
+    "update": "Frissítve",
+    "from": "Ról",
+    "to": "Re",
+    "paymentDue": "Fizetési határidő",
+    "amount": "Összeg",
     "planFree": "Free",
     "planBasic": "Basic",
     "planPro": "Pro",
@@ -536,6 +584,7 @@
     "statusActive": "Aktív",
     "statusSuspended": "Felfüggesztve",
     "statusExpired": "Lejárt",
+    "actions": "Akciók",
     "siteNotFound": "Site nem található",
     "siteEdit": {
       "tabs": {
@@ -562,8 +611,10 @@
       "subscription": {
         "title": "Előfizetés",
         "currentPlan": "Jelenlegi csomag",
-        "validUntil": "Érvényes",
-        "changePlan": "Csomag módosítása",
+      "validUntil": "Érvényes",
+      "noDate": "Nincs dátum",
+      "invalidDate": "Érvénytelen dátum",
+      "changePlan": "Csomag módosítása",
         "planContents": "Csomag tartalma",
         "usage": "Használat",
         "availablePlans": "Elérhető csomagok",
@@ -626,6 +677,10 @@
       "legalPagesDesc": "Jogi oldalak kezelése",
       "staticPages": "Statikus oldalak",
       "staticPagesDesc": "Blog, tudástár és infó oldalak kezelése",
+      "galleries": "Galériák",
+      "galleriesDesc": "Képgallériák kezelése és shortcode generálása",
+      "galleries": "Galériák",
+      "galleriesDesc": "Képgallériák kezelése és shortcode generálása",
       "appSettingsDesc": "Rendszer szintű beállítások kezelése",
       "usersDesc": "Felhasználók és jogosultságok kezelése",
       "eventLog": "Esemény napló",
@@ -711,7 +766,8 @@
       "brands": "Keresés márkák között...",
       "siteInstances": "Keresés oldal példányok között (site, nyelv, domain)...",
       "tenantMemberships": "Keresés site tagságok között (site, felhasználó, szerepkör)...",
-      "placeMemberships": "Keresés hely tagságok között (hely, felhasználó, szerepkör)..."
+      "placeMemberships": "Keresés hely tagságok között (hely, felhasználó, szerepkör)...",
+      "galleries": "Keresés galériák között (név, ID)..."
     },
     "searchResults": "{{count}} / {{total}} találat",
     "pagination": {
@@ -849,12 +905,27 @@
       "placeRequired": "A hely kötelező",
       "roleRequired": "A szerepkör kötelező"
     },
+    "common": {
+      "isActive": "Aktív",
+      "yes": "Igen",
+      "no": "Nem",
+      "optional": "Opcionális",
+      "selectSite": "Válassz egy site-ot",
+      "uploading": "Feltöltés...",
+      "remove": "Eltávolítás",
+      "save": "Mentés",
+      "cancel": "Mégse",
+      "create": "Létrehozás",
+      "edit": "Szerkesztés",
+      "delete": "Törlés"
+    },
     "confirmations": {
       "deleteCategory": "Biztosan törölni szeretnéd ezt a kategóriát?",
       "deleteTag": "Biztosan törölni szeretnéd ezt a címkét?",
       "deletePriceBand": "Biztosan törölni szeretnéd ezt az ár szintet?",
       "deletePlace": "Biztosan törölni szeretnéd ezt a helyet?",
       "deleteTown": "Biztosan törölni szeretnéd ezt a települést?",
+      "deleteGallery": "Biztosan törölni szeretnéd ezt a galériát?",
       "deleteLegalPage": "Biztosan törölni szeretnéd ezt a jogi oldalt?",
       "deleteUser": "Biztosan törölni szeretnéd ezt a felhasználót? Ez a művelet nem vonható vissza.",
       "deleteSite": "Biztosan törölni szeretnéd ezt a site-ot?",
@@ -877,6 +948,7 @@
       "placeCreated": "Hely sikeresen létrehozva",
       "placeUpdated": "Hely sikeresen frissítve",
       "placeDeleted": "Hely sikeresen törölve",
+      "placePlanUpdated": "Helyszín csomag sikeresen frissítve",
       "priceBandCreated": "Ár szint sikeresen létrehozva",
       "priceBandUpdated": "Ár szint sikeresen frissítve",
       "priceBandDeleted": "Ár szint sikeresen törölve"
@@ -994,6 +1066,34 @@
     "categoryBlog": "Blog",
     "categoryTudastar": "Tudástár",
     "categoryInfok": "Infók",
+    "galleries": "Galériák",
+    "galleries.title": "Galériák",
+    "galleries.name": "Név",
+    "galleries.namePlaceholder": "Galéria neve (opcionális)",
+    "galleries.images": "Képek",
+    "galleries.imagesCount": "kép",
+    "galleries.layout": "Elrendezés",
+    "galleries.layoutGrid": "Rács",
+    "galleries.layoutMasonry": "Masonry",
+    "galleries.layoutCarousel": "Körkörös",
+    "galleries.aspect": "Képarány",
+    "galleries.aspectAuto": "Automatikus",
+    "galleries.aspectSquare": "Négyzet",
+    "galleries.aspect4_3": "4:3",
+    "galleries.aspect16_9": "16:9",
+    "galleries.shortcode": "Shortcode",
+    "galleries.createGallery": "Új galéria létrehozása",
+    "galleries.editGallery": "Galéria szerkesztése",
+    "galleries.addImages": "Képek hozzáadása",
+    "galleries.captionPlaceholder": "Képaláírás (opcionális)",
+    "galleries.noGalleries": "Nincs galéria",
+    "errors.loadGalleriesFailed": "Hiba a galériák betöltésekor",
+    "errors.createGalleryFailed": "Hiba a galéria létrehozásakor",
+    "errors.updateGalleryFailed": "Hiba a galéria frissítésekor",
+    "errors.deleteGalleryFailed": "Hiba a galéria törlésekor",
+    "errors.uploadFailed": "Hiba a kép feltöltésekor",
+    "validation.atLeastOneImageRequired": "Legalább egy kép szükséges",
+    "confirmations.deleteGallery": "Biztosan törölni szeretnéd ezt a galériát?",
     "seoTitlePlaceholder": "SEO cím (ha üres, automatikus)",
     "seoTitleHint": "Ha üres, akkor a cím lesz használva",
     "seoDescriptionPlaceholder": "SEO leírás (ha üres, automatikus)",
