--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -236,13 +236,20 @@
     "noUsersFound": "Keine Benutzer gefunden",
     "readMore": "Weiterlesen",
     "settings": "Einstellungen",
+    "dashboardWelcome": "Willkommen im Admin-Bereich",
+    "openPublicPage": "Öffentliche Seite öffnen",
+    "backToPublicSite": "Zurück zur öffentlichen Seite",
+    "loggedOutSuccessfully": "Sie wurden erfolgreich abgemeldet",
     "appSettings": "Plattform-Einstellungen",
     "profileMenu": "Profil",
     "logout": "Abmelden",
     "language": "Sprache",
     "site": "Site",
     "login": "Anmelden",
+    "loginWithGoogle": "Mit Google anmelden",
     "register": "Registrieren",
+    "registerWithGoogle": "Mit Google registrieren",
+    "or": "oder",
     "registering": "Registrierung läuft...",
     "registrationFailed": "Registrierung fehlgeschlagen",
     "loginFailed": "Anmeldung fehlgeschlagen",
@@ -256,6 +263,8 @@
     "username": "Benutzername",
     "email": "E-Mail",
     "password": "Passwort",
+    "passwordTooShort": "Das Passwort muss mindestens 6 Zeichen lang sein",
+    "createAccount": "Neues Konto erstellen",
     "firstName": "Vorname",
     "lastName": "Nachname",
     "bio": "Bio (optional)",
@@ -321,7 +330,9 @@
     "seoDescription": "SEO-Beschreibung",
     "seoDescriptionPlaceholder": "Standard-SEO-Beschreibung",
     "platformSettingsUpdated": "Plattform-Einstellungen aktualisiert.",
+    "select": "Auswählen...",
     "selectCategory": "Kategorie auswählen",
+    "selectCategoryPlaceholder": "Kategorie auswählen...",
     "selectTown": "Stadt auswählen",
     "selectPriceBand": "Preisklasse auswählen",
     "heroImageUrl": "Hero-Bild URL",
