--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -137,6 +137,16 @@
     "open": "Open",
     "readMore": "Read more",
     "category": "Category",
+    "activateFree": {
+      "cta": "Activate Free Site",
+      "success": "Free site activated successfully!",
+      "error": "Failed to activate site.",
+      "modal": {
+        "title": "Activate Free Site",
+        "description": "Are you sure you want to activate the free site? This will give you access to the dashboard and allow you to start working on your site.",
+        "confirm": "Activate"
+      }
+    },
     "priceBand": "Price Band",
     "tags": "Tags",
     "address": "Address",
@@ -222,6 +232,10 @@
     "edit": "Edit",
     "dashboard": "Dashboard",
     "description": "Description",
+    "dashboardWelcome": "Welcome to the admin panel",
+    "openPublicPage": "Open Public Page",
+    "backToPublicSite": "Back to public site",
+    "loggedOutSuccessfully": "You have been logged out successfully",
     "categories": "Categories",
     "tags": "Tags",
     "priceBands": "Price Bands",
@@ -247,6 +261,12 @@
     "registrationFailed": "Registration failed",
     "loginFailed": "Login failed",
     "loggingIn": "Logging in...",
+    "login": "Login",
+    "loginDescription": "Sign in to the admin panel",
+    "loginWithGoogle": "Sign in with Google",
+    "register": "Register",
+    "registerWithGoogle": "Sign up with Google",
+    "or": "or",
     "pleaseEnter2FACode": "Please enter your 2FA code",
     "twoFactorCode": "2FA Code",
     "enter2FACodeDescription": "Enter the 6-digit code from your authenticator app",
@@ -256,6 +276,8 @@
     "username": "Username",
     "email": "Email",
     "password": "Password",
+    "passwordTooShort": "Password must be at least 6 characters long",
+    "createAccount": "Create a new account",
     "firstName": "First Name",
     "lastName": "Last Name",
     "bio": "Bio (optional)",
@@ -321,7 +343,9 @@
     "seoDescription": "SEO Description",
     "seoDescriptionPlaceholder": "Default SEO description",
     "platformSettingsUpdated": "Platform settings updated.",
+    "select": "Select...",
     "selectCategory": "Select category",
+    "selectCategoryPlaceholder": "Select category...",
     "selectTown": "Select town",
     "selectPriceBand": "Select price band",
     "heroImageUrl": "Hero Image URL",
