--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -215,7 +215,9 @@
       "legal": "Rechtliche Informationen",
       "quickLinks": "Schnellzugriff",
       "rights": "Alle Rechte vorbehalten."
-    }
+    },
+    "beTheFirst": "Sei der Erste!",
+    "saving": "Speichern..."
   },
   "admin": {
     "titleSuffix": "Admin",
