--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -225,7 +225,9 @@
       "legal": "Legal Information",
       "quickLinks": "Quick Links",
       "rights": "All rights reserved."
-    }
+    },
+    "beTheFirst": "Be the first!",
+    "saving": "Saving..."
   },
   "admin": {
     "titleSuffix": "Admin",
