--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -227,7 +227,9 @@
       "legal": "Jogi információk",
       "quickLinks": "Gyors linkek",
       "rights": "Minden jog fenntartva."
-    }
+    },
+    "beTheFirst": "Legyél Te az első!",
+    "saving": "Mentés..."
   },
   "admin": {
     "titleSuffix": "Admin",
