--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -230,6 +230,7 @@
     "places": "Orte",
     "priceList": "Preisliste",
     "priceListDesc": "Preisliste verwalten",
+    "analyticsLabel": "Analytics",
     "newBlock": "Neuer Block",
     "newItem": "Neues Element",
     "blockTitle": "Block-Titel",
