--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -244,7 +244,7 @@
     "places": "Places",
     "priceList": "Price List",
     "priceListDesc": "Manage price list",
-    "analytics": "Analytics",
+    "analyticsLabel": "Analytics",
     "newBlock": "New Block",
     "newItem": "New Item",
     "blockTitle": "Block Title",
