--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -246,7 +246,7 @@
     "places": "Helyek",
     "priceList": "Árlap",
     "priceListDesc": "Árlista kezelése",
-    "analytics": "Analytics",
+    "analyticsLabel": "Analytics",
     "newBlock": "Új blokk",
     "newItem": "Új sor",
     "blockTitle": "Blokk címe",
